--- a/package.json
+++ b/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~12.1.1",
-    "@angular/animations": "~12.1.1",
-    "@angular/cdk": "^12.1.1",
-    "@angular/common": "~12.1.1",
-    "@angular/compiler": "~12.1.1",
-    "@angular/core": "~12.1.1",
-    "@angular/forms": "~12.1.1",
-    "@angular/localize": "^12.1.1",
-    "@angular/material": "^12.1.1",
-    "@angular/platform-browser": "~12.1.1",
-    "@angular/platform-browser-dynamic": "~12.1.1",
-    "@angular/router": "~12.1.1",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/animations": "^12.1.5",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.1.5",
+    "@angular/compiler": "^12.1.5",
+    "@angular/core": "^12.1.5",
+    "@angular/forms": "^12.1.5",
+    "@angular/localize": "^12.2.14",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "^12.1.5",
+    "@angular/platform-browser-dynamic": "^12.1.5",
+    "@angular/router": "^12.1.5",
     "core-js": "^2.6.12",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.1",
     "rxjs": "^6.6.7",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "~12.1.1",
-    "@angular/compiler-cli": "~12.1.1",
-    "@angular/language-service": "~12.1.1",
+    "@angular/cli": "^12.1.4",
+    "@angular/compiler-cli": "^12.1.5",
+    "@angular/language-service": "^12.1.5",
     "@schematics/angular": "^8.3.29",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/node": "^12.11.1",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^12.20.37",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
